repertoire.css
html {
  scroll-behavior: smooth;
}

body {
  background: linear-gradient(30deg, rgb(77, 77, 77), rgb(58, 58, 58));
}
#page-logo a {
  color: rgb(183, 230, 235);
}

header {
  /* position: static; */
  position: relative; /*Bug 16*/
}

header a {
  color: rgb(183, 230, 235);
}

header nav a:hover {
  background-color: rgb(183, 230, 235);
  color: rgb(59, 59, 59);
}

#page-logo a:hover {
  background-color: rgb(183, 230, 235);
  color: rgb(59, 59, 59);
}

main ul {
  width: 1200px;
  margin: 0 auto 48px auto;
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px 20px;
}

li:nth-of-type(3n) {
  grid-column: 1 / span 2;
}

/* li:nth-of-type(2n):hover {
  transform: translate3D(0, -5px, 0);
}
li:nth-of-type(2n + 1):hover {
  transform: translate3D(-5px, 0, 0);
} */
/* li:nth-of-type(3n):hover {
  transform: translate3D(0, 0, -5px);
} */

main li {
  display: flex;
  background-color: white;
  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.2);
  border-radius: 6px;
  overflow: hidden;
}

main li img {
  width: 300px;
  height: 280px;
  object-fit: cover;
}

#rooty li img {
  /* width: 300px; */
  width: 200px;
  height: auto;
  object-fit: fill;
}

.item-content {
  padding: 24px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.item-content h2 {
  margin: 0;
}
#rooty .item-content h2 {
  margin: 0;
  padding-left: 2.5rem;
}

#rooty .item-content h4 {
  margin: 0;
  padding-left: 2.5rem;
  font-family: monospace;
  font-style: italic;
  margin: 1rem 0;
}

.actions {
  text-align: right;
}

.actions a {
  text-decoration: none !important;
  padding: 6px;
  color: rgb(22, 211, 228) !important;
  border-radius: 5px;
  cursor: pointer;
}

.actions a:hover {
  background-color: rgb(235, 253, 255);
}

/* Added for jquery components */

h1 {
  text-align: center;
  background-image: linear-gradient(120deg, #fbc2eb 0%, #a6c1ee 100%);
  margin: 0 0 2rem 0;
  font-size: 1.5rem;
  color: white;
}

/* Bug 15 */
/* .imgDiv {
  height: auto !important;
}

.imgDiv img {
  height: 250px !important;
  width: 150px !important;
} */
/* Bug 15 ends  */

#imgDiv img {
  display: block;
  /* margin: 1rem auto; */
  max-width: 100%;
}

.container p {
  padding: 0 2.5rem 2.5rem;
  margin: 0;
}

.container {
  display: flex;
  flex-wrap: wrap;
}

.card {
  margin: 1rem;
  background: white;
  box-shadow: 2px 4px 25px rgba(0, 0, 0, 0.1);
  border-radius: 12px;
  overflow: hidden;
  transition: all 0.2s linear;
}

.card:hover {
  box-shadow: 2px 8px 45px rgba(0, 0, 0, 0.15);
  transform: translate3D(0, -5px, 0);
}

@media screen and (min-width: 600px) {
  .card {
    flex: 1 1 calc(50% - 2rem);
  }
}

@media screen and (min-width: 900px) {
  .card {
    flex: 1 1 calc(33% - 2rem);
  }
}

.card:nth-child(2n) h1 {
  background-image: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);
}

.card:nth-child(4n) h1 {
  background-image: linear-gradient(120deg, #ff9a9e 0%, #fecfef 100%);
}

.card:nth-child(5n) h1 {
  background-image: linear-gradient(120deg, #ffc3a0 0%, #ffafbd 100%);
}

#hero-content h1 {
  background-image: none;
}

#show {
  cursor: pointer;
  background-color: rgb(186 170 74) !important;
}

/* header {
  background-color: rgba(138, 127, 29, 0.5);
} */

.card img {
  width: 100%;
  margin-top: 0;
  height: inherit;
}

.card h1 {
  margin: 0;
}

.imgDiv {
  height: 500px;
  margin: 1rem auto;
  margin-top: 0;
  object-fit: cover;
}

.small-icon {
  height: 50px !important;
  width: 50px !important;
  padding: 5px;
}

.actions a {
  padding: 25px;
  padding: 10px;
}

@media screen and (max-width: 1100px) {
  li {
    grid-column: 1 / span 2;
  }
}

.waiter {
  height: 300px;
  width: 400px;
  /* object-fit: cover; */
  /* display: flex; Bug 20 */
  margin: auto;
  margin-bottom: 40px;
  margin-top: 30px;
  display: block; /*Bug 20*/
}

.waiter button {
  height: auto;
  width: auto;
  font-size: 4.5rem;
  background-color: dimgray !important;
  margin: auto;
}

.waiter span {
  width: 4.5rem;
  height: 4.5rem;
}

/* .footer-ul {
  flex-direction: row;
} */

.list-group {
  flex-direction: row;
  padding-top: 30px;
}

.list-group-item {
  color: white;
  background: linear-gradient(70deg, rgb(24, 24, 24), rgb(25, 29, 29));
}

#footer a {
  cursor: pointer;
}

#toggle {
  /* color: rgb(183, 230, 235); */
  cursor: pointer;
}

.container li:target {
  background-color: rgb(170, 135, 149);
}

/* Legendary both one above and one below */
.container li:focus {
  background-color: rgb(135, 170, 144);
}

.container li:focus {
  background-color: rgb(135, 170, 144);
}

.container li:hover {
  /* transition: all 0.2s linear; */
  /* translate: 5px; */
  box-shadow: 2px 8px 45px rgba(0, 0, 0, 0.15);
  /* transform: translate3D(0, -5px, 0); */
  /* transform: translate3D(-5px, 0, 0); */
}

.headerLinkDark {
  color: antiquewhite !important;
}

#footer .list-group a {
  text-decoration: none;
}

#download {
  background-color: white;
}

@media screen and (max-width: 650px) {
  /* #rooty .hook img {
    width: 40%;
    height: 100%;
  } */

  /* .hook .actions img {
    height: auto;
    width: auto;
  } */

  .book-img {
    width: 40% !important;
    height: 100%;
  }

  .hook p {
    font-size: 12px;
    padding-bottom: 0px;
  }

  .hook h2 {
    font-size: 1.2rem;
    padding-left: 0 !important;
  }

  .hook h4 {
    font-size: 0.9rem;
    margin: 0 !important;
    padding-left: 0 !important;
  }

  header {
    width: max-content;
    display: contents;
  }

  #page-logo .headerLink {
    font-size: 2rem;
  }

  header li a {
    font-size: 1rem;
  }

  nav {
    padding-bottom: 10px;
  }

  .actions {
    display: flex;
    justify-content: space-between;
    display: inline-block;
  }

  .actions a {
    padding: 5px;
  }

  .item-content p {
    padding: 0px;
  }

  .item-content {
    padding: 10px;
  }

  .small-icon {
    height: 25px !important;
    width: 25px !important;
  }
}

/* Bug 15 */
/* .card {
  transform: translateX(100px);
  opacity: 0;
  transition: 150ms;
}
.card.show {
  transform: translateX(0);
  opacity: 1;
} */

.hook {
  transform: translateX(100px);
  opacity: 0;
  transition: 150ms;
}
.hook.show {
  transform: translateX(0);
  opacity: 1;
}
/* Bug 15 ends */

/* Bug 16 starts  */
footer {
  /* position: absolute; */
  position: relative;
}
/* Bug 16 ends  */

/* Bug 19 starts */
header a:focus {
  outline: 3px solid white;
}

#root .card:focus {
  outline: 5px solid white;
  outline-offset: 5px;
}
/* Bug 19 ends */

